# Lib

./: .gitignore  CLAUDE.md  NOTICE  README.md  THIRD_PARTY_LICENSES.md  jitpack.yml  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/lib/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
docs/: SUBMISSION.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rag-library/: build.gradle.kts
rag-library/src/androidTest/java/com/example/rag_library/: ExampleInstrumentedTest.java  LlmEngineTest.kt  NativeVectorIndexHnswTest.kt  NativeVectorIndexTest.kt  OnDeviceRAGCoreTest.kt  OnnxEmbedderTest.kt  PersistenceTest.kt  RagEngineTest.kt
rag-library/src/main/cpp/: CMakeLists.txt  dot_product.h  hnsw_index.cpp  hnsw_index.h  index_io.cpp  index_io.h  llm_engine.cpp  llm_engine.h  llm_jni.cpp  native-lib.cpp  rag_jni.cpp  vector_index.cpp  vector_index.h
rag-library/src/main/cpp/tests/: bench.cpp  hnsw_index_test.cpp  index_io_test.cpp  llm_engine_smoke.cpp  vector_index_test.cpp
rag-library/src/main/java/com/example/rag_library/: ChunkStore.kt  Embedder.kt  HashingEmbedder.kt  LlmEngine.kt  Models.kt  NativeLlm.kt  NativeVectorIndex.kt  OnDeviceRAGCore.kt  OnnxEmbedder.kt  Pooling.kt  QwenPromptBuilder.kt  RagChat.kt  RagEngine.kt  TextChunker.kt  Tokenizer.kt  UnigramTokenizer.kt
rag-library/src/test/java/com/example/rag_library/: ChunkStoreTest.kt  ExampleUnitTest.java  HashingEmbedderTest.kt  PoolingTest.kt  QwenPromptBuilderTest.kt  TextChunkerTest.kt  UnigramTokenizerTest.kt
scripts/: prepare_model.py
